fixed flickering issue

--- a/packages/app/src/components/SelectionRouter/SelectIModel.scss
+++ b/packages/app/src/components/SelectionRouter/SelectIModel.scss
@@ -19,6 +19,7 @@
     > .iui-metadata {
       position: absolute;
       bottom: 5px;
+      width: 264px;
     }
   }
 
